Fixed minor layout issues

--- a/assets/stylesheets/layout.styl
+++ b/assets/stylesheets/layout.styl
@@ -5,7 +5,10 @@ body
   margin 0
   padding 40px 0 0 0
 
-.title-container, .search-bar-container, .sort-selector-container
+.sub-navbar-view
+  padding 20px 0px
+
+.sort-selector-container
   padding 20px
 
 .text-center
